# ubcrt

./: CMakeLists.txt  CMakePresets.json  CRTDetSim_module.cc
test/: CMakeLists.txt
test/test_fcl/: CMakeLists.txt  test_fcl_ubcrt.sh
ubcrt/: CMakeLists.txt
ubcrt/CRT/: CMakeLists.txt  CRTAnalyser_module.cc  CRTAuxDetInitializer_tool.cc  CRTAuxFunctions.cc  CRTAuxFunctions.hh  CRTCalibration_module.cc  CRTChannelMapAlg.cc  CRTChannelMapAlg.hh  CRTDaqSim_module.cc  CRTDataHitCorr_module.cc  CRTDataQuality_module.cc  CRTDetSim.hh  CRTDetSim_module.cc  CRTFileManager.cc  CRTFileManager.h  CRTFileManager_service.cc  CRTFlashAna_module.cc  CRTGeoObjectSorter.cc  CRTGeoObjectSorter.hh  CRTGeoObjectSorter_tool.cc  CRTGeometryHelper.cc  CRTGeometryHelper.hh  CRTGeometryHelper_service.cc  CRTHitPositionPerModule_module.cc  CRTHitProducer_module.cc  CRTMerger.hh  CRTMergerExtra.hh  CRTMergerExtra_module.cc  CRTMerger_module.cc  CRTOverlayHotFix_module.cc  CRTRawtoCRTHitGPScorr_source.cc  CRTRawtoCRTHit_source.cc  CRTSimHitCorr_module.cc  CRTSimHitProducer_module.cc  CRTTiming_module.cc  CRTTrackProducer.fcl  CRTTrackProducerAndT0RecoCRT.fcl  CRTTrackProducer_module.cc  CRTTriggerCorr.fcl  CRTTriggerTimeProducerSimple_module.cc  (+36 more)
ubcrt/CRT/CRTBernFEBDAQCore/: CMakeLists.txt
ubcrt/CRT/CRTBernFEBDAQCore/BernZMQBinarySource/: BernZMQBinaryInputStreamReader.cc  CMakeLists.txt
ubcrt/CRT/CRTBernFEBDAQCore/Overlays/: BernFEBFragment.hh  BernZMQFragment.hh  CMakeLists.txt
ubcrt/CRT/CRTBinarySource/: CMakeLists.txt
ubcrt/CRT/test/: merge.C
ubcrt/CRTXSEC/: CMakeLists.txt  CRTAnaFun.cc  CRTAnaFun.hh  CRTEventAnalyser_module.cc  CRTLArPandoraExternalEventBuilding_module.cc  CRTNeutrinoIdBaseTool.h  CRTSimpleNeutrinoId_tool.cc  CRTTPCAssoAnalyser_module.cc  CRTXSEC_module.cc  CRTtoTTreeVector.fcl  CRTtoTTreeVector_module.cc  CRTtoTTree_module.cc  ConsolidatedOutputAnalyserAllTracks_module.cc  ConsolidatedOutputAnalyser_module.cc  EventAnalyser_module.cc  TPCTrackAnalyser_module.cc  external_event_buildingAlltrack_analyser.fcl  run_TrackShowerReco.fcl
ubcrt/UBCRTCosmicFilter/: CMakeLists.txt  CRTDistanceFilter.fcl  CRTDistanceFilter_module.cc  DC_extnumi_files.txt  ExternalVtx_module.cc  G4VetoSignalImpact_module.cc  UBCRTCosmicFilter.fcl  UBCRTCosmicFilter_module.cc  Vtx.txt  VtxBogusProducer.fcl  VtxExample.txt  classes.h  classes_def.xml  run_CRTDistanceFilter.fcl  run_ExtVtx.fcl  run_G4VetoSignalImpact.fcl  run_UBCRTCosmicFilter.fcl  run_UBCRTCosmicFilter_MC.fcl  run_VtxBogus.fcl
ubcrt/UBCRTCosmicFilter/doNotCompile/: UBProximityFilter_module.cc
ubcrt/UBCRTCosmicFilter/inputfilelists/: bnb_dirt_mcc8_dev.txt  bnb_dirt_reco_1file.txt  bnb_nu_mcc8_dev.txt  bnb_nue_mcc8_dev.txt  offbeam.txt  offbeamnumi.txt  onbeam.txt  onbeamnumi.txt
ups/: product_deps
